<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scroll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
    android:background="@color/mybg4">
            <!--android:background="#3b000000">-->


    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   >
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginTop="5sp"
        android:id="@+id/tSettings"
        android:textColor="@color/mybg9"
        android:text="@string/Settings"
        android:gravity="center_horizontal">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout120"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="3sp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginTop="2sp"
            android:id="@+id/tEnterSecretCode"
            android:text="@string/enterTheSecretCode"
            android:gravity="left">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1202"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="2sp">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:id="@+id/tOnlyDigits"
        android:text="@string/onlyDigits"
        android:gravity="left">
    </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout12"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="3sp">
        <EditText
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:layout_marginRight="15sp"
            android:gravity="left"
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:inputType="numberDecimal">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1201"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="3sp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginTop="3sp"
            android:id="@+id/tApprove"
            android:text="@string/ApproveTheSecretCode"
            android:gravity="left">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="3sp">
        <EditText
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:layout_marginRight="15sp"
            android:id="@+id/et2"
            android:layout_width="match_parent"
            android:gravity="left"
            android:inputType="numberDecimal">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="3sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:textColor="@color/mybg9"
            android:text="@string/cancel"
            android:id="@+id/btnCancel">
        </Button>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:text="@string/enter"
            android:textColor="@color/mybg9"
            android:id="@+id/btnEnter">
        </Button>

    </LinearLayout>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:text="@string/Illuminate"
        android:textColor="@color/mybg9"
        android:id="@+id/checkBox2"
        android:layout_gravity="center_horizontal"
        android:checked="false" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout222"
        android:layout_marginTop="3sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="10sp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="2sp"
            android:layout_weight="1"
            android:id="@+id/tNumOfLevels"
            android:text="@string/SetNumberOfLevelsToSolveBeforeUnlock"
            android:gravity="left">
        </TextView>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_weight="5"
            android:gravity="center"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout223"
        android:layout_marginTop="3sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="10sp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="2sp"
            android:layout_weight="1"
            android:id="@+id/tNumOfAttempts"
            android:text="@string/SetNumberOfAttempts"
            android:gravity="left">
        </TextView>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0sp"
            android:layout_marginRight="0sp"
            android:layout_weight="5"
            android:gravity="center"
            android:id="@+id/spinner2"

             />
    </LinearLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="12sp"
            android:id="@+id/tDelay1"
            android:text="@string/SetDelay"
            android:gravity="left">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout224"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="10sp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="2sp"
                android:layout_weight="1"
                android:id="@+id/tDelay"
                android:text="@string/DelayInSeconds"
                android:gravity="left">
            </TextView>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner0"
                android:layout_weight="5"
                android:gravity="center"
                android:layout_gravity="top"/>
        </LinearLayout>


        <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="12sp"
        android:id="@+id/tAmountOfTimeToLiveDeviceUnlock"
        android:text="@string/SetAmountOfTimeToLeaveTheDeviceUnlock"
        android:gravity="left">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2233"
        android:layout_marginTop="3sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="10sp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="2sp"
            android:layout_weight="1"
            android:id="@+id/tDays"
            android:text="@string/Days"
            android:gravity="left">
        </TextView>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0sp"
            android:layout_marginRight="0sp"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/spinner3"
            android:layout_gravity="top" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="1sp"
            android:layout_marginRight="2sp"
            android:layout_weight="1"
            android:id="@+id/tHours"
            android:text="@string/Hours"
            android:gravity="left">
        </TextView>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0sp"
            android:layout_marginRight="0sp"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/spinner4"
            android:layout_gravity="top" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="1sp"
            android:layout_marginRight="2sp"
            android:textSize="14sp"
            android:layout_weight="1"
            android:id="@+id/tMinutes"
            android:text="@string/Minutes"
            android:gravity="left">
        </TextView>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0sp"
            android:layout_marginRight="0sp"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/spinner5"
            android:layout_gravity="top" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout22"
        android:layout_marginTop="3sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="1sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:textColor="@color/mybg9"
            android:layout_weight="1"
            android:text="@string/backToChess2"
            android:id="@+id/btnBack">
        </Button>

    </LinearLayout>


</LinearLayout>
</ScrollView>